--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trender-client",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "description": "Official Trender client API",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -26,24 +26,25 @@
     "lint:typings": "tslint src/index.ts",
     "test:typescript": "tsc --noEmit",
     "lint:fix": "eslint src --fix",
-    "dev": "node ./test/test.mjs",
+    "dev": "node ./test/index.mjs",
+    "dev:ts": "ts-node ./test/index.ts",
     "build": "rm -rf ./dist && tsc && cp README.md ./dist/README.md && cp package.json ./dist/package.json && cp LICENSE ./dist/LICENSE",
     "update": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "prettier": "^2.5.1",
-    "ts-node": "^10.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.8.2"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.27.2"
   },
   "engines": {
     "node": ">=14.6.0",
