--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trender-client",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Official Trender client API",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -41,10 +41,12 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "@types/ws": "^8.5.3"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "ws": "^8.8.1"
   },
   "engines": {
     "node": ">=14.6.0",
