--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trender-client",
-  "version": "1.3.8",
+  "version": "1.4.0",
   "description": "Official Trender client API",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -44,7 +44,8 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "iso-639-1": "^2.1.15"
   },
   "engines": {
     "node": ">=14.6.0",
