possibility for custom CDN Url

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     // Emit
     "declaration": true,
     "importHelpers": true,
+    "ignoreDeprecations": "5.0",
     "importsNotUsedAsValues": "error",
     "inlineSources": false,
     "newLine": "lf",
