--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trender-client",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "description": "Official Trender client API",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -32,16 +32,16 @@
     "update": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "prettier": "^2.7.1",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.8.2"
+    "typescript": "^5.0.0-beta"
   },
   "dependencies": {
     "axios": "^0.27.2"
