--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "prettier": "^2.8.3",
-    "ts-node": "^10.9.1",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.0.0-beta"
+    "typescript": "^5.5.2"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^1.7.2"
   },
   "engines": {
     "node": ">=14.6.0",
